--- a/css/styles.css
+++ b/css/styles.css
@@ -544,6 +544,157 @@ border-radius: 4px;
   width: 30px;
   background-color: white;
   cursor: pointer;
+  z-index: 1000;
+}
+/* Modal form */
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin: 0;
+  padding-top: 30px;
+}
+.modal-txt {
+  font-size: 20px;
+  line-height: 1.17;
+  font-weight: 700;
+  text-align: center;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+.modal-form label {
+  font-size: 12px;
+  line-height: 1.15;
+  color: rgba(117, 117, 117, 1);
+  padding-left: 40px;
+  margin-bottom: 4px;
+  margin-top: 12px;
+}
+.modal-form input{
+  width: 448px;
+  height: 40px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.modal-form input,
+.modal-form textarea {
+  color: var(--text-grey);
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  display: block;
+}
+.user-comment {
+  height: 120px;
+  width: 448px;
+  padding: 12px 16px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.user-comment::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+  font-size: 12px;
+  line-height: 1.15;
+}
+.modal-checkbox {
+  display: flex;
+  justify-content: center;
+  margin-top: 0;
+  padding-right: 40px;
+}
+.modal-checkbox a {
+  color: rgba(33, 150, 243, 1);
+}
+.checkbox-label::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  margin-left: 0;
+  margin-right: 7px;
+  display: inline-block;
+  border: 3px solid rgba(33, 33, 33, 1);
+  border-radius: 4px;
+}
+.checkbox-input {
+  position: absolute;
+  opacity: 0;
+}
+.checkbox-input:checked + .checkbox-label::before {
+  background-color: rgba(33, 150, 243, 1);
+  border: none;
+  background-image: url(../images/tick.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.checkbox-label {
+  margin: 0;
+  padding: 0;
+  align-self: center;
+}
+.modal-form input:hover,
+.modal-form textarea:hover {
+  border: 1px solid rgba(33, 150, 243, 1);
+  border-radius: 4px;
+}
+.user-comment:focus-visible,
+input:focus-visible {
+  outline: none;
+  border: 1px solid  rgba(33, 150, 243, 1);
+}
+.modal-send-button {
+  width: 200px;
+  height: 50px;
+  background:  rgba(33, 150, 243, 1);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  color: #fff;
+  margin: auto;
+  margin-top: 30px;
+  border: none;
+}
+.modal-send-button:hover {
+  cursor: pointer;
+}
+.modal-form label:focus-within svg {
+  fill:  rgba(33, 150, 243, 1);
+}
+.input-icon {
+  width: 12px;
+  height: 12px;
+  fill: #000;
+  position: absolute;
+  left: 52px;
+}
+
+.icon-user-name {
+  width: 12px;
+  height: 12px;
+  top: 94px;
+}
+
+.icon-modal-phone {
+  height: 13px;
+  width: 13px;
+  top: 164px;
+}
+
+.icon-modal-email {
+  width: 15px;
+  height: 12px;
+  top: 233px;
+}
+
+
+.icon-user-name {
+width: 12px;
+height: 12px;
 }
 .close-button {
   height: 30px;
@@ -556,4 +707,55 @@ border-radius: 4px;
 }
 .is-hidden .modal {
   opacity: 100%;
+}
+.newsletter {
+  margin-left: 78px;
+}
+.newsletter-txt {
+  margin-block-start: 12px;
+  margin-block-end: 20px;
+  color: rgba(255, 255, 255, 1);
+}
+.newsletter-input {
+  width: 300px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+background-color: rgba(47, 48, 58, 1);
+padding-left: 16px;
+color: white;
+outline: none;
+;
+}
+input:focus {
+outline: 1px solid rgba(33, 150, 243, 1);
+}
+
+.newsletter-btn {position: relative;
+  margin-left: 12px;
+  width: 200px;
+height: 50px;
+  background: rgba(33, 150, 243, 1);
+  color: rgba(255, 255, 255, 1);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+border: none;
+padding-left: 42px;
+padding-right: 0;
+}
+.newsletter-btn h4 {
+font-size: 16px;
+line-height: 1.875;
+text-align: left;
+margin-block-start: 0;
+margin-block-end: 0;
+}
+.send-icon {
+  position: absolute;
+  right: 25px;
+  top: 13px;
+  width: 24px;
+  height: 24px;
+  fill: white;
 }
